crates/rstest-bdd-macros/tests/ui/two_mutable_fixtures.stderr
error[E0499]: cannot borrow value as mutable more than once at a time
 --> tests/ui/two_mutable_fixtures.rs:5:1
  |
5 | #[given("two mutable fixtures")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
  | |                              |
  | |                              first borrow might be used here, when `__rstest_bdd_guard_rstest_bdd_arg_0` is dropped and runs the destructor for type `FixtureRefMut<'_, FirstFixture>`
  | value was mutably borrowed here in the previous iteration of the loop
  |
  = note: this error originates in the attribute macro `given` (in Nightly builds, run with -Z macro-backtrace for more info)
